changed image sizing on modal results. possibly have fixed the veil issue on mobile (gotta see). possibly gonna update the button with the new style.

--- a/yourmet-sveltekit/src/global.css
+++ b/yourmet-sveltekit/src/global.css
@@ -266,6 +266,7 @@ img {
 .markSeenButtonResults,
 .markUnseenResults {
   position: relative;
+  right: 2px;
 }
 .addToGalleryButton {
   position: relative;
